 /* $Id: ChangeLog,v 1.727 2000-02-13 17:43:54 phaller Exp $ */

 2000-02-12: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: added v5.00 messages to wndmsg.cpp
	- GDI32: LineDDA fix

 2000-02-12: David Raison <djr@lemur.co.uk>
 	- OLE32: Fixed IsEqualIID issue

 2000-02-11: Vit Timchishin <tvv@sbs.kiev.ua>
	- KERNEL32: Fix for OpenFile; fill in OFSTRUCT even if api fails
                    (needed for Acrobat Reader 4.0)

 2000-02-10: Knut Stange Osmundsen (knut.stange.osmundsen@pmsc.no)
        - /tools/database/ + /src/makefile: Odin32 API DB.

 2000-02-10: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: added some stubs
		  fixed wrong pixels at the right side of menu items
	- COMCTL32: implemented LVS_NOSORTHEADER
		    increased statusbar height (temporal hack)
		    first steps of treeview rewrite

 2000-02-10: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: Added support for memory map handles in CreateDIBSection
                 Fixed CreateICA/W; Open32's version is case sensitive whereas
                 win32's apparently isn't.
	- TOOLS\makefile: fixed clean build
	- src\makefile: fixed clean build
	- src\makefile.smp: fixed incorrect dir change

 2000-02-10: Knut Stange Osmundsen (knut.stange.osmundsen@pmsc.no)
        - *: Updated the source tree to use autogenerated dependencies.
             You will have to do a 'nmake dep' from either /src or / before
             being able to make anything.
             -All makefiles is required to have a 'dep' rule.
             -All dll makefiles is now required to have a 'lib' rule which
              makes the libraries for the module. This rule should also
              check that the library in $(PDWIN32_LIB) is up-to-date.
        - Tools/FastDep: Dependency tool. (Fast=Quick-and-Dirty)
             Moved from /src/win32k. This is currently used to generate
             dependency information.
             Note that it doesn't have any precompiler logic! This is causeing