@@ -1,4 +1,8 @@
- /* $Id: ChangeLog,v 1.727 2000-02-13 17:43:54 phaller Exp $ */
+ /* $Id: ChangeLog,v 1.728 2000-02-14 17:26:58 cbratschi Exp $ */
+
+ 2000-02-14: Christoph Bratschi <cbratschi@datacomm.ch>
+	- USER32: merged combobox with Corel 20000212
+	- COMCTL32: merged treeview with Corel 20000212 and continued rewrite
 
  2000-02-12: Christoph Bratschi <cbratschi@datacomm.ch>
 	- USER32: added v5.00 messages to wndmsg.cpp
